# software_development_tools_lab_1

./: CMakeLists.txt  README.md  functions.cpp  header.h  main.cpp
test/: unit_tests.cpp  unit_tests_borderline_cases.cpp
